# privacyidea

./: .codespell_skip  .coveralls.yml  .deepsource.toml  .dockerignore  .env  .env.example  .gitignore  .gitmodules  .pep8speaks.yml  .readthedocs.yaml  .travis.yml  .travis_check.sh  AUTHORS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.rst  Changelog  DESCRIPTION  Dockerfile  Gruntfile.js  ISSUE_TEMPLATE.md  MANIFEST.in  Makefile  Procfile  Profile  README.md  README.rst  READ_BEFORE_UPDATE.md  SECURITY.md  circle.yml  codecov.yml  compose-dev.yml  config.py  coveragerc  dependencies.dot  docker-compose.dev.yml  doxygen.conf  flake.nix  manage.py  migrate_tests_to_pytest_async.md  (+14 more)
.circleci/: config.yml
.claude/: settings.json
.github/: check_for_changes.sh  codecov.yml  dependabot.yml  filters.yml  python-versions.env
.github/ISSUE_TEMPLATE/: 1-bug_report.md  2-feature_request.md  3-are_you_lost.md  4-idea.md  are-you-lost-.md  bug_report.md  feature_request.md
.github/workflows/: bandit.yml  codeql-analysis.yml  codeql.yml  codespell.yaml  container-build.yml  deb-build.yml  dependency-review.yml  docker-build.yml  docker-dev-image.yml  docs-build.yml  gitlab-trigger-branch-tag.yml  gitlab-trigger-master.yml  gitlab-trigger-on-tag.yml  gitlab-trigger.yml  gitlab_trigger.yml  greetings.yml  migration-tests.yml  osv-scanner-backend.yml  osv-scanner-frontend.yml  osv-scanner.yml  pip-audit.yml  python-dist.yml  python-package.yml  python-requirements-sync.yml  python-versions-validate.yml  python.yml  rd_codespell.yaml  rd_misspell.yaml  reviewdog.yml  ruff.yml  unit-tests-mariadb.yml  unit-tests-postgres.yml  unit-tests-redis.yml  unit-tests.yml  webui-build.yml  webui-lint.yml  webui-lockfile-sync.yml  webui-test.yml  zizmor.yml
authmodules/: README.md
authmodules/FreeRADIUS/: copyright  dictionary.netknights  privacyidea  privacyidea_radius.pm  rlm_perl.ini
authmodules/OTRS/: README.rst  privacyIDEA-4_0.pm  privacyIDEA.pm
authmodules/TYPO3/: Makefile
authmodules/apache2/: README.md  apache.conf  privacyidea_apache.py
authmodules/ownCloud/: README.rst
authmodules/pam-python/: README.md  common-auth-pi  privacyidea-pam.py
authmodules/pam_python/: README.md  common-auth-pi  privacyidea-pam-remain.1  privacyidea-pam-remain.py  privacyidea_pam.py
authmodules/simpleSAMLphp/: README.md  copyright
config/: admin-users  privacyidea-paster  privacyidea.ini.example  privacyideaapp.wsgi  token.sqlite
config-old/: admin-users  dummy-encKey  privacyidea.ini.example  privacyideaapp.py
config-old/debian/: privacyidea.ini
config/debian/: privacyidea.ini
config/redhat/: privacyidea.spec
contrib/: Makefile  README.md  gh_check_for_changes.sh
contrib/patches/: jwt_add_provides  jwt_remove_setup_required  remove-generated-timestamp
debian/: changelog  control  privacyidea-apache2.install  privacyidea-apache2.postinst  privacyidea-apache2.postrm  privacyidea-appliance.postinst  privacyidea-nginx.install  privacyidea-nginx.postinst  privacyidea-radius.install  privacyidea-radius.postinst  privacyidea-simplesamlphp.install  privacyidea.install  privacyidea.postinst  privacyidea.postrm  python-privacyidea.install
deploy/: README.md  logging.cfg  pi.cfg  privacyideaapp.wsgi  reset-db.sh
deploy/centos/: pi.cfg  privacyidea.spec
deploy/crontab/: privacyidea
deploy/debian-jessie/: changelog  control  privacyidea-apache2.postinst  privacyidea-nginx.postinst  watch  (+4 more)
dev/: angular-dependency-upgrading.md  migrating-tests-to-pytest-xdist.md  python-dependency-upgrading.md  redis.md  token-deprecation-strategy.md  user-resolving-updates.md
doc/: Makefile  conf.py  glossary.rst  index.rst  requirements.txt  spelling_wordlist.txt  todo.rst
migrations/: env.py  script.py.mako
po/: cs.po  de.po  es.po  fr.po  hu.po  id.po  it.po  lo.po  mn.po  nb_NO.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  si.po  sk.po  ta.po  template.pot  tr.po  uk.po  zh_Hans.po  zh_Hant.po
privacyidea/: README.txt  __init__.py  app.py  babel.cfg  config.py  messages.pot  models.py  websetup.py
tests/: README.md  api_container_common.py  api_lib_policy_common.py  api_validate_common.py  authlog_utils.py  base.py  conditional_access_lockout_base.py  conftest.py  crypto_helper.py  grpcmock.py  ldap3mock.py  migration_test_utils.py  mockutils.py  mscamock.py  passkey_base.py  passkeytestbase.py  pkcs11mock.py  queuemock.py  radiusmock.py  redismock.py  requirements.in  requirements.txt  smmpmock.py  smppmock.py  smtpmock.py  test-migrate.sh  test_api_2stepinit.py  test_api_applications.py  test_api_audit.py  test_api_auth.py  test_api_authentication_event_logging.py  test_api_authentication_log.py  test_api_caconnector.py  test_api_clienttype.py  test_api_conditional_access.py  test_api_conditional_access_policy.py  test_api_conditional_access_state.py  test_api_container.py  test_api_container_admin.py  test_api_container_api.py  (+184 more)
tools/: creategoogleauthenticator-file  generate_seed_sql.py  getgooglecodes  pi-token-janitor.py  privacyidea-authorizedkeys  privacyidea-backup  privacyidea-convert-base32.py  privacyidea-convert-token  privacyidea-convert-token.1  privacyidea-convert-xml-to-csv  privacyidea-create-ad-users  privacyidea-create-ad-users.1  privacyidea-create-auditkeys  privacyidea-create-auditkeys.1  privacyidea-create-certificate  privacyidea-create-certificate.1  privacyidea-create-database  privacyidea-create-database.1  privacyidea-create-enckey  privacyidea-create-enckey.1  privacyidea-create-pwidresolver-user  privacyidea-create-pwidresolver-user.1  privacyidea-create-sqlidresolver-user  privacyidea-create-sqlidresolver-user.1  privacyidea-create-userdb  privacyidea-create-userdb.1  privacyidea-create-userdb.sh  privacyidea-cron  privacyidea-decrypt-safeword.py  privacyidea-diag  privacyidea-diag.sh  privacyidea-expired-users  privacyidea-export-linotp-counter.py  privacyidea-export-privacyidea-counter.py  privacyidea-fetchssh  privacyidea-fetchssh.1  privacyidea-find-oath  privacyidea-fix-access-rights  privacyidea-fix-access-rights.1  privacyidea-get-serial  (+21 more)
(+4120 files in other folders)
