[project]
name = "privacyIDEA"
version = "3.9"
description="privacyIDEA: multifactor authentication management system"
readme = "README.rst"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["OTP", "two-factor authentication", "management", "security", "2fa", "mfa"]
authors = [
    {name = "Cornelius Kölbel", email = "cornelius@privacyidea.org"}
]
maintainers = [
  {name = "Cornelius Kölbel", email = "cornelius@privacyidea.org"}
]
classifiers = [
    "Framework :: Flask",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Topic :: Internet",
    "Topic :: Security",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10'
]

dependencies = [
    "argon2_cffi>=20.1.0",
    "beautifulsoup4[lxml]>=4.3.2",
    "cbor2>=5.0.1",
    "configobj>=5.0.6",
    "croniter>=0.3.8",
    "cryptography>=2.4.2",
    "defusedxml>=0.4.1",
    "Flask>=0.10.1,<2.0",
    "Flask-Babel>=0.9,<3.0",
    "Flask-Migrate>=1.2.0,<3.0",
    "Flask-Script>=2.0.5",
    "Flask-SQLAlchemy>=2.0,<3.0",
    "Flask-Versioned>=0.9.4",
    "google-auth>=1.23.0",
    "grpcio>=1.46",
    "huey[redis]>=1.11.0",
    "importlib_metadata>=2.1.1; python_version=='3.7'",
    "ldap3>=2.8,<2.9",
    "netaddr>=0.7.12",
    "passlib[bcrypt]>=1.7.0",
    "protobuf>=3.20",
    "pydash>=4.7.4",
    "PyJWT>=1.3.0",
    "PyMySQL>=0.6.6",
    "pyOpenSSL>=17.5",
    "pyrad>=2.0",
    "python-dateutil>=2.7.3",
    "python-gnupg>=0.4.4",
    "PyYAML>=5.1",
    "requests>=2.7.0",
    "segno>=1.5",
    "smpplib>=2.0",
    "SQLAlchemy>=1.4.0,<2.0"
]

[project.optional-dependencies]
test = [
    "mock>=2.0.0",
    "pyparsing>=3.0",
    "pytest>=3.6.0",
    "pytest-cov>=2.5.1",
    "responses>=0.9.0",
    "testfixtures>=6.14.2"
]
doc = [
    "Pallets-Sphinx-Themes>=1.2.3",
    "Sphinx>=1.3.1",
    "sphinxcontrib-httpdomain>=1.3.0",
    "sphinxcontrib-plantuml>=0.18",
    "sphinxcontrib-spelling>=7.0.0"
]
postgres = [
    'psycopg2>=2.8.3'
]
hsm = [
    'PyKCS11>=1.5.10'
]
kerberos = [
    'gssapi>=1.7.0'
]

[project.urls]
homepage = "https://privacyidea.org"
documentation = "https://privacyidea.readthedocs.io"
repository = "https://github.com/privacyidea/privacyidea"
changelog = "https://github.com/privacyidea/privacyidea/blob/master/Changelog"

[project.scripts]
pi-manage = "privacyidea.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
